k8s/db-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      type: db
  template:
    metadata:
      labels:
        type: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: db
        image: mongo:latest
        ports:
          - containerPort: 27017
        resources:
          limits:
            memory: 100Mi
            cpu: 0.1
          requests:
            memory: 50Mi
            cpu: 0.01
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
      # annotations:
      # volume.beta.kubernetes.io/storage-class: "slow"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
