k8s/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
#   type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    type: api
