k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  ports:
  - name: db
    port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    type: db
